# brickvar

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/brickvar/: __init__.py  config.py
tests/: conftest.py  test_config.py
tests/data/seq_array/: config.json  expected.json  vars.json
